--- a/src/components/ReceipeSelector/ReceipeSelector.module.css
+++ b/src/components/ReceipeSelector/ReceipeSelector.module.css
@@ -1,12 +1,1 @@
-.receipe-selector {
-  color: red;
-  
-  h1 {
-    font-size: 1.3em;
-  }
-  .container {
-    background-color: white;
-    color: lime;
-    text-align: center;
-  }
-}
+.receipe-selector { }
