--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,10 @@
 
 :root {
   /* color-scheme: light dark; */
+
+  @apply bg-orange-400 text-white;
+}
+
+input, select {
+  @apply bg-orange-400 text-white border border-zinc-400/50 rounded p-1;
 }
