--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,10 @@
 :root {
   /* color-scheme: light dark; */
 
-  @apply bg-orange-400 text-white;
+  @apply bg-yellow-400 text-grey-400;
 }
 
-input, select {
-  @apply bg-orange-400 text-white border border-zinc-400/50 rounded p-1;
+input,
+select {
+  @apply rounded border border-zinc-400/50 bg-yellow-400 p-1 text-grey-400;
 }
